# sibyl

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  args.html  build.rs  conn.html  conn_own.html  conn_pool.html  dyn_sql.html  encoding.html  env.html  example_project.html  exec.html  index.html  intro.html  issues.html  limits.html  nchar.html  nulls.html  odt.html  opt_features.html  print.html  searcher-c2a407aa.js  searchindex-6106713e.js  searchindex-94e949d9.js  searchindex-e281be9e.js  searchindex.js  searchindex.json  session_pool.html  slices.html  testing.html  toc-298883ce.js  toc.html  toc.js  using.html
.github/workflow/: mdbook.yml
.github/workflows/: mdbook.yml
book/: book.toml
book/src/: SUMMARY.md  args.md  conn.md  conn_own.md  conn_pool.md  dyn_sql.md  encoding.md  env.md  example_project.md  exec.md  intro.md  issues.md  limits.md  nchar.md  nulls.md  odt.md  opt_features.md  session_pool.md  slices.md  testing.md  using.md
book/src/odt/: cursor.md  date.md  interval.md  lobs.md  number.md  raw.md  rowid.md  timestamp.md  varchar.md
etc/: create_sandbox.sql
etc/media/: hello_supplemental.txt  hello_world.txt  hello_world_cyrillic.txt  konnichiwa_sekai.txt
examples/: arg_as_array.rs  arg_as_slice.rs  async_book_intro.rs  async_connection_per_task.rs  async_pooled_sessions.rs  async_readme.rs  binding.rs  book_intro.rs  connection_per_thread.rs  dyn_args.rs  dyn_args_slice.rs  inf_async_pooled_sessions.rs  inf_pooled_sessions.rs  multithreaded_connection_per_thread.rs  multithreaded_one_shared_connection.rs  multithreaded_pooled_connections.rs  multithreaded_pooled_sessions.rs  nchar.rs  null_empty_string.rs  null_nvl.rs  null_option.rs  pooled_connections.rs  pooled_sessions.rs  readme.rs
examples/async-median-salary/: Cargo.toml
examples/async-median-salary/src/: main.rs
examples/blocking/: lorem_ipsum.txt
examples/blocking/insert_clob/: Cargo.toml
examples/blocking/insert_clob/src/: main.rs
examples/blocking/select_clobs/: Cargo.toml
examples/blocking/select_clobs/src/: main.rs
examples/blocking/update_clob/: Cargo.toml
examples/blocking/update_clob/src/: main.rs
examples/median-salary/: Cargo.toml
examples/median-salary/src/: main.rs
examples/nonblocking/: Cargo.toml
examples/nonblocking/insert_clob/: Cargo.toml
examples/nonblocking/insert_clob/src/: main.rs
examples/nonblocking/select_clobs/: Cargo.toml
examples/nonblocking/select_clobs/src/: main.rs
examples/nonblocking/update_clob/: Cargo.toml
odt/: cursor.html  date.html  interval.html  lobs.html  number.html  raw.html  rowid.html  timestamp.html  varchar.html
src/: attr.rs  column.rs  conn.rs  cursor.rs  defs.rs  desc.rs  env.rs  err.rs  fromsql.rs  handle.rs  lib.rs  lob.rs  nvl.rs  oci.rs  param.rs  pool.rs  ptr.rs  rowid.rs  rows.rs  session.rs  stmt.rs  task.rs  test.rs  tosql.rs  tosqlout.rs  types.rs
src/conn/: blocking.rs  nonblocking.rs
src/env/: blocking.rs  nonblocking.rs
src/lob/: blocking.rs  nonblocking.rs
src/oci/: attr.rs  desc.rs  futures.rs  handle.rs  param.rs  ptr.rs
src/pool/: connection.rs  session.rs
src/pool/connection/: blocking.rs  nonblocking.rs
src/pool/session/: blocking.rs  nonblocking.rs
src/session/: blocking.rs  nonblocking.rs
src/stmt/: args.rs  bind.rs  blocking.rs  cols.rs  cursor.rs  data.rs  defs.rs  fromsql.rs  nonblocking.rs  rows.rs
src/stmt/args/: bin.rs  binvec.rs  bool.rs  nchar.rs  num.rs  str.rs  string.rs
src/stmt/cursor/: blocking.rs  nonblocking.rs
src/stmt/rows/: blocking.rs  nonblocking.rs
src/task/: actix.rs  async_global.rs  async_std.rs  tokio.rs
src/types/: date.rs  interval.rs  number.rs  raw.rs  rowid.rs  timestamp.rs  varchar.rs
src/types/date/: tosql.rs
src/types/interval/: tosql.rs
src/types/number/: convert.rs  tosql.rs
src/types/raw/: tosql.rs
src/types/rowid/: tosql.rs
src/types/timestamp/: tosql.rs
src/types/varchar/: tosql.rs
tests/: args.rs  client_version.rs  data_types.rs  dyn_args.rs  lobs.rs  multithreaded.rs  nvl.rs  option_args.rs  slice_args.rs
(+1 files in other folders)
