[package]
name = "sibyl"
version = "0.6.3"
edition = "2018"
description = "An OCI-based (synchronous or asynchronous) interface between Rust applications and Oracle databases"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
license = "MIT"
keywords = ["database","sql","oracle","ffi","async"]
categories = ["database"]
repository = "https://github.com/quietboil/sibyl"
homepage = "https://quietboil.github.io/sibyl"
documentation = "https://docs.rs/sibyl"

[dependencies]
libc = "0.2"
once_cell = "1.9"
parking_lot = "0.12"
tokio-rt = { version = "1", features = ["rt"], optional = true, package = "tokio" }
actix-rt = { version = "2.6", default-features = false, optional = true }
async-rt = { version = "1.10", features = ["unstable"], optional = true, package = "async-std" }
async-global-executor = { version = "2.0", optional = true }

[dev-dependencies]
tokio-rt = { version = "1", features = ["rt", "rt-multi-thread"], package = "tokio" }

[features]
blocking = []
nonblocking = []
tokio = ["tokio-rt"]
actix = ["actix-rt"]
async-std = ["async-rt"]
async-global = ["async-global-executor"]

[package.metadata.docs.rs]
features = ["blocking", "nonblocking", "tokio"]
rustdoc-args = ["--cfg", "docsrs"]