[package]
name = "sibyl"
version = "0.6.17"
edition = "2018"
description = "An OCI-based (synchronous or asynchronous) interface between Rust applications and Oracle databases"
authors = ["Alex Demenchuk <alexander.demenchuk@gmail.com>"]
license = "MIT"
keywords = ["database","sql","oracle","ffi","async"]
categories = ["database"]
repository = "https://github.com/quietboil/sibyl"
homepage = "https://quietboil.github.io/sibyl"
documentation = "https://docs.rs/sibyl"

[dependencies]
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
tokio-rt = { version = "1.39", features = ["rt"], optional = true, package = "tokio" }
actix-rt = { version = "2.10", default-features = false, optional = true }
async-rt = { version = "1.6", features = ["unstable"], optional = true, package = "async-std" }
async-global-executor = { version = "2.4", optional = true }
async-once-cell = { version = "0.5", optional = true }

[dev-dependencies]
tokio-rt = { version = "1.39", features = ["rt", "rt-multi-thread"], package = "tokio" }

[features]
blocking = []
nonblocking = ["async-once-cell"]
unsafe-direct-binds = []
tokio = ["tokio-rt"]
actix = ["actix-rt"]
async-std = ["async-rt"]
async-global = ["async-global-executor"]

[package.metadata.docs.rs]
features = ["blocking", "nonblocking", "tokio"]
rustdoc-args = ["--cfg", "docsrs"]

[profile.test]
opt-level = 2